--- a/wrangler.toml
+++ b/wrangler.toml
@@ -42,11 +42,14 @@ enabled = true
 
 # Bind a D1 database. D1 is Cloudflare’s native serverless SQL database.
 # Docs: https://developers.cloudflare.com/workers/wrangler/configuration/#d1-databases
-[[d1_databases]]
-binding = "DB"
+#[[d1_databases]]
+#binding = "DB"
 #database_name = "my-database"
 #database_id = "xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx"
-
+[[d1_databases]]
+binding = "DB"
+database_name = "todo-app-re"
+database_id = "b046d1aa-9f79-4bd7-b389-d2f6b138f0b9"
 # Bind a dispatch namespace. Use Workers for Platforms to deploy serverless functions programmatically on behalf of your customers.
 # Docs: https://developers.cloudflare.com/workers/wrangler/configuration/#dispatch-namespace-bindings-workers-for-platforms
 # [[dispatch_namespaces]]
